# ai-engineering

./: README.md
ai-agents/: README.md  pyproject.toml
ai-agents/1_foundations/: complete_tutorial.py
ai-agents/2.openai/: README.md  agents.ipynb  requirements.txt
ai-agents/3.langgraph/: 01-core-concepts.md  02-graphs.md  README.md  graph1_hello_world.ipynb  graph2_mulitple_inputs.ipynb  graph3_sequential.ipynb  graph4_conditional_graph.ipynb
ai-agents/foundations/: README.md
apps/aqi-cards/: aqi.py
crewai/: explain.md  start.sh
crewai/2_content_pipeline/: __init__.py  agents.py  tasks.py
crewai/backend/: crew_service.py  langgraph_pipeline.py  main.py  models.py  requirements.txt  research.db  research_service.py
crewai/frontend/: package.json  tailwind.config.ts
langgraph/: .gitignore  explain.md
langgraph/backend/: research_service.py
learn/: README.md  pyproject.toml
learn/01-fundamentals/: README.md  concepts.py  requirements.txt
learn/02-prompt-engineering/: README.md  techniques.py
learn/03-llm-apis/: README.md  anthropic_basics.py  openai_basics.py  requirements.txt
learn/04-agents/: 01_tool_use.py  02_rag.py  03_react_agent.py  (+3 more)
learn/05-orchestration/langgraph-masterclass/: 1-basic-graphs.py  2-multiple-inputs.py  3-sequential-graph.py  4-conditional-graph.py  5-looping-graph.py  6-agent-1.py  7-agent-2.py  8-react-agent.py  9-drafter.py  LangGraph.md  Reference.md  agenticai.txt  practice.py  pyproject.toml  rust-poem.txt
prompts/: aqi.py  nano-calendar.md  origami.md
rag/: RAG Mastery.md
story-generator/: README.md
(+103 files in other folders)
